represents spec tests & spec debug
